- main menu item

--- a/01_menu/app/src/main/res/menu/menu_main.xml
+++ b/01_menu/app/src/main/res/menu/menu_main.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:title="test1"
+        app:showAsAction="withText|always"
+        android:icon="@android:drawable/ic_btn_speak_now"
         android:id="@+id/menu_test1"/>
 
     <item android:title="test2"
