--- a/05_listview2/app/src/main/res/layout/item_view.xml
+++ b/05_listview2/app/src/main/res/layout/item_view.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/descView"
         android:textSize="20dp"
         android:text="desc"
         android:layout_alignLeft="@id/titleView"
