--- a/P01_loginForm_byjh/app/src/main/res/layout/activity_main.xml
+++ b/P01_loginForm_byjh/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
                 android:layout_width="70dp"
                 android:layout_height="wrap_content" />
             <EditText
+                android:inputType="textPassword"
                 android:hint="Input PW"
                 android:id="@+id/editPW"
                 android:layout_width="match_parent"
@@ -51,6 +52,8 @@
 
         </LinearLayout>
         <Button
+            android:id="@+id/myBtn"
+            android:layout_marginTop="35dp"
             android:layout_gravity="center_horizontal"
             android:text="login"
             android:layout_width="wrap_content"
