--- a/P01_loginForm_byjh/app/src/main/res/layout/activity_myactivity.xml
+++ b/P01_loginForm_byjh/app/src/main/res/layout/activity_myactivity.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/textView"
         android:textSize="40dp"
         android:text="Hello"
         android:layout_width="wrap_content"
