--- a/13_mediaPlayer/app/src/main/res/layout/activity_main.xml
+++ b/13_mediaPlayer/app/src/main/res/layout/activity_main.xml
@@ -23,4 +23,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop" />
+
+    <SeekBar
+        android:id="@+id/seekbar"
+        android:layout_marginTop="40dp"
+        android:layout_below="@id/btnPlay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </RelativeLayout>
