--- a/P02_mediaplay/app/src/main/res/layout/activity_main.xml
+++ b/P02_mediaplay/app/src/main/res/layout/activity_main.xml
@@ -14,5 +14,9 @@
         android:id="@+id/listView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tvMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
