--- a/15_br2/app/src/main/res/layout/activity_main.xml
+++ b/15_br2/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.b.a15_br2.MainActivity">
 
-    <TextView
+    <Button
+        android:onClick="onSendClick"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
