--- a/19_fragment/app/src/main/res/layout/activity_main.xml
+++ b/19_fragment/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.b.a18_camera.MainActivity">
+    tools:context="com.example.b.a19_fragment.MainActivity">
 
-    <Button
-        android:id="@+id/btn"
-        android:onClick="onBtnClick"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
-    <ImageView
-        android:scaleType="centerInside"
-        android:src="@drawable/desert"
-        android:layout_below="@id/btn"
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 </RelativeLayout>
