--- a/21_dialog/app/src/main/res/layout/dialog_layout.xml
+++ b/21_dialog/app/src/main/res/layout/dialog_layout.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/btnDialog"
         android:text="ok"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
